@@ -1,5 +1,9 @@
 2008-02-02  Dominic Lachowicz <domlachowicz@gmail.com>
 
+	* test-display.c: Get rid of gnome print. Use gtk-print instead (#508526)
+	
+2008-02-02  Dominic Lachowicz <domlachowicz@gmail.com>
+
 	* configure.in: Bump version #; automake warning about required AM_PROG_CC_C_O (#513858)
 	
 2008-02-02  Jan Arne Petersen <jpetersen@jpetersen.org>
